# exllama-cuda-kernels

./: CMakeLists.txt  flake.nix
exllama/: CMakeLists.txt  cuda_buffers.cu  cuda_buffers.cuh  cuda_compat.cuh  matrix.cuh  tuning.h  util.cuh
exllama/cuda_func/: column_remap.cu  column_remap.cuh  half_matmul.cu  half_matmul.cuh  q4_matmul.cu  q4_matmul.cuh  q4_matrix.cu  q4_matrix.cuh  rms_norm.cu  rms_norm.cuh  rope.cu  rope.cuh
